# tinyland-auth

./: .bazelrc  BUILD.bazel  CHANGELOG.md  GAP_ANALYSIS.md  LICENSE  MODULE.bazel  README.md  flake.nix  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.public-api.json  vitest.config.ts
.github/workflows/: ci.yml  publish.yml
docs/: bootstrap-from-zero.md  invite-onboarding-walkthrough.md  rbac-matrix.md  registry-wiring-bazel.md  role-charter.md  tinyland-databaseless-auth-mvp.md
examples/: tinyland-databaseless-auth-mvp.ts
scripts/: check-invitation-authority.mjs  check-rbac-subpath.mjs  check-release-metadata.mjs  ci-bazel-test.sh
src/: index.ts
src/activity/: index.ts
src/adapters/sveltekit/: guards.ts  hook.ts  index.ts  mtls.ts  ownership.ts  session-cookies.ts
src/adapters/sveltekit/stores/: csrf.svelte.ts
src/audit/: index.ts
src/core/backup-codes/: index.ts
src/core/permissions/: index.ts  ownership.ts
src/core/security/: index.ts  mtls.ts  password.ts
src/core/session/: activity-tracking.ts  index.ts
src/core/totp/: index.ts
src/cred-gen/: generator.ts  helpers.ts  index.ts
src/modules/audit/: index.ts
src/modules/bootstrap/: attempt-store.ts  index.ts
src/modules/invitation/: index.ts
src/rbac/: index.ts
src/storage/: conformance.ts  file.ts  firstUserBootstrap.ts  fixedTenant.ts  index.ts  interface.ts  memory.ts
src/totp/: compat.ts  index.ts  otplib-compat.ts
src/types/: api.ts  auth.ts  config.ts  index.ts  permissions.ts
src/validation/: handle-validator.ts  index.ts
tests/: activity-tracking.test.ts  audit.test.ts  backup-codes.test.ts  bootstrap.test.ts  cred-gen.test.ts  csrf.test.ts  databaseless-mvp.test.ts  fixed-tenant.test.ts  guards.test.ts  handle-validator.test.ts  invitation-authority.test.ts  invitation-not-exported.test.ts  package-authority.test.ts  password.test.ts  permissions.test.ts  rbac-contract.test.ts  rbac-invariants.test.ts  security.test.ts  session.test.ts  storage-conformance.test.ts  storage-conformance.ts  totp-compat.test.ts  totp.test.ts
tests/fixtures/legacy-0.7-file-store/auth/: admin-users.json
type-tests/: rbac-public-api.ts
