load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@tummycrypt_tinyland_auth_npm//:defs.bzl", "npm_link_all_packages")
load("@tummycrypt_tinyland_auth_npm//:vitest/package_json.bzl", vitest_bin = "bin")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "tinyland_auth",
    srcs = glob(
        ["src/**/*.ts"],
        exclude = [
            "src/**/*.test.ts",
            "src/**/*.spec.ts",
        ],
    ) + ["package.json"],
    declaration = True,
    declaration_map = True,
    out_dir = "dist",
    root_dir = "src",
    source_map = False,
    transpiler = "tsc",
    tsconfig = ":tsconfig.json",
    validate = False,
    deps = [
        ":node_modules",
        ":node_modules/@types/bcryptjs",
        ":node_modules/@types/node",
        ":node_modules/@types/qrcode",
        ":node_modules/bcryptjs",
        ":node_modules/nanoid",
        ":node_modules/otplib",
        ":node_modules/qrcode",
    ],
)

vitest_bin.vitest_test(
    name = "test",
    args = [
        "run",
        "--reporter=verbose",
        "--config",
        "$(rootpath vitest.config.ts)",
    ],
    data = glob(["src/**/*.ts"]) + glob(["tests/**/*.ts"]) + [
        ":node_modules",
        ":node_modules/vitest",
        "tsconfig.json",
        "vitest.config.ts",
    ],
    log_level = "info",
)

ts_project(
    name = "typecheck",
    srcs = glob(["src/**/*.ts"]) + ["package.json"],
    declaration = False,
    no_emit = True,
    transpiler = "tsc",
    tsconfig = ":tsconfig.json",
    validate = False,
    deps = [
        ":node_modules",
        ":node_modules/@types/bcryptjs",
        ":node_modules/@types/node",
        ":node_modules/@types/qrcode",
        ":node_modules/bcryptjs",
        ":node_modules/nanoid",
        ":node_modules/otplib",
        ":node_modules/qrcode",
    ],
)

exports_files(
    [
        "package.json",
        "tsconfig.json",
        "vitest.config.ts",
        "README.md",
    ],
)

npm_package(
    name = "pkg",
    srcs = [
        ":tinyland_auth",
        ":README.md",
        ":package.json",
    ],
    package = "@tummycrypt/tinyland-auth",
    version = "0.3.0",
)
